--- a/EthosInc/EthosInc.csproj
+++ b/EthosInc/EthosInc.csproj
@@ -1,7 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
+    <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+    </PropertyGroup>
+
+    <ItemGroup>
+    <Folder Include="wwwroot\Product-Pictures\" />
+    </ItemGroup>
+	
+    <ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" /> 
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" /> 
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2" /> 
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2"> 
+          <PrivateAssets>all</PrivateAssets> 
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets> 
+        </PackageReference>
+	    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2" />
+	</ItemGroup>
+	
+    <ItemGroup> 
+        <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" /> 
+        <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" /> 
+      </ItemGroup>
 
 </Project>
