--- a/EthosInc/EthosInc.csproj
+++ b/EthosInc/EthosInc.csproj
@@ -20,6 +20,8 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets> 
         </PackageReference>
 	    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
 	</ItemGroup>
 	
     <ItemGroup> 
