--- a/EthosInc/EthosInc.csproj
+++ b/EthosInc/EthosInc.csproj
@@ -22,6 +22,7 @@
 	    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2" />
 	</ItemGroup>
 	
     <ItemGroup> 
